[package]
name = "taffy-js"
version = "0.1.2"
edition = "2024"
authors = ["ByteLandTechnology <github@byteland.app>"]
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/ByteLandTechnology/taffy-js"
description = "WebAssembly bindings for Taffy layout library"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
taffy = { version = "0.9.2", default-features = false, features = ["std", "taffy_tree", "flexbox", "grid", "block_layout"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["serde_derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1


